--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin flex ($align, $justify){
+@mixin flex ( $justify, $align){
     display: flex;
     justify-content: $justify;
     align-items: $align;
