--- a/style/SCSS/_fonts.scss
+++ b/style/SCSS/_fonts.scss
@@ -1,4 +1,4 @@
-@font-face {font-family: "Segoe";
+@font-face {font-family: "Segoe UI";
     src: url("../../assest/fonts/"); /* IE9*/
     src: url("../../assest/fonts/?#iefix") format("embedded-opentype"), /* IE6-IE8 */
     url("../../assest/fonts/4735dd9ca25670c44600021e7428b8d3.woff2") format("woff2"), /* chrome、firefox */
