--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,4 +1,8 @@
-$color_white: white;
+$white: white;
 $border-color: #dbdbdb;
+$gray: gray;
+$lightbluea: lightblue;
 
-$main-font: "Segoe", sans-serif;
+$main-font: "Segoe UI", sans-serif;
+
+$containerWidth: 946px;
