--- a/style/SCSS/main.css
+++ b/style/SCSS/main.css
@@ -16,6 +16,7 @@ a {
 button {
   cursor: pointer;
   border: 0;
+  background-color: transparent;
 }
 
 table {
@@ -28,13 +29,18 @@ th, td {
 }
 
 @font-face {
-  font-family: "Segoe";
+  font-family: "Segoe UI";
   src: url("../../assest/fonts/"); /* IE9*/
   src: url("../../assest/fonts/?#iefix") format("embedded-opentype"), url("../../assest/fonts/4735dd9ca25670c44600021e7428b8d3.woff2") format("woff2"), url("../../assest/fonts/4735dd9ca25670c44600021e7428b8d3.woff") format("woff"), url("../../assest/fonts/4735dd9ca25670c44600021e7428b8d3.ttf") format("truetype"), url("../../assest/fonts/4735dd9ca25670c44600021e7428b8d3.svg#Segoe") format("svg"); /* iOS 4.1- */
 }
+.wrapper {
+  font-family: "Segoe UI", sans-serif;
+  font-style: normal;
+}
+
 .container {
   width: 100%;
-  max-width: 986px;
+  max-width: 946px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -46,27 +52,178 @@ th, td {
   left: 0;
   width: 100%;
   padding: 9px 0;
+  background-color: white;
   border-bottom: 1px solid #dbdbdb;
+  z-index: 10;
 }
 .header-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+.header-search {
+  border: 1px solid #dbdbdb;
+  border-radius: 3px;
+  padding: 0 9px;
+}
+.header-search input {
+  border: none;
+  outline: none;
+  padding: 9px 25px 9px 0;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 129%;
+  color: gray;
+}
 .header-navbar {
   position: relative;
 }
-.header-navbar-icon {
+.header-navbar_icon {
+  width: 22px;
+  height: 22px;
   position: relative;
 }
-.header-navbar-icon svg {
-  fill: #fff;
+.header-navbar_icon:not(:last-child) {
+  margin-right: 22px;
 }
 
 /*--- HEADER END ---*/
 /*--- MAIN START ---*/
 .main {
   padding-top: 82px;
+}
+.main-row {
+  position: relative;
+}
+.main-left {
+  width: 613.954px;
+  min-height: 100%;
+  border: 1px solid #dbdbdb;
+}
+.main-left_top {
+  position: relative;
+  border-bottom: 0.5px solid #dbdbdb;
+  padding: 18px 0 18px 24px;
+}
+.main-left_top-stories {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-left_top-story {
+  position: relative;
+}
+.main-left_top-story-title {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 133%;
+  text-align: center;
+  letter-spacing: 0.12px;
+  text-transform: lowercase;
+}
+.main-left_bottom {
+  position: relative;
+}
+.main-left_bottom-up {
+  position: relative;
+  padding: 9px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-left_bottom-up-title {
+  position: relative;
+  top: -16px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 129% px;
+  text-transform: lowercase;
+}
+.main-left_bottom-down-img {
+  position: relative;
+  width: 100%;
+}
+.main-left_bottom-down-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.main-left_bottom-down-items {
+  position: relative;
+  padding: 0 0 0 16px;
+}
+.main-left_bottom-down-items-com {
+  position: relative;
+}
+.main-left_bottom-down-items-com-title {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 129%;
+}
+.main-left_bottom-down-items-com-title-plus {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 129%;
+}
+.main-left_bottom-down-items-com-subtitle {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 139%;
+  color: gray;
+}
+.main-left_bottom-down-items-com-subtitle-plus {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 190%;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  color: gray;
+  margin-bottom: 17px;
+}
+.main-left_bottom-down-btns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-left_bottom-down-btn {
+  padding: 15px 5px;
+  background-color: white;
+}
+.main-right {
+  position: fixed;
+  width: 302.046px;
+  top: 82px;
+  right: calc((100vw - 946px) / 2);
+  border: 1px solid red;
+}
+
+.comments {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #dbdbdb;
+  padding: 10px 11px;
+}
+.comments input {
+  position: relative;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  top: -6px;
+  margin-left: 16px;
+}
+.comments .post {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 129%;
+  color: lightblue;
+}
+
+.comment {
+  text-align: center;
+  padding-top: 7px;
 }
 
 /*--- MAIN END ---*//*# sourceMappingURL=main.css.map */
