--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -2,6 +2,7 @@ $white: white;
 $border-color: #dbdbdb;
 $gray: gray;
 $lightbluea: lightblue;
+$blue: #0095F6;
 
 $main-font: "Segoe UI", sans-serif;
 
