--- a/style/SCSS/main.scss
+++ b/style/SCSS/main.scss
@@ -308,4 +308,10 @@
     text-transform: none;
 }
 
+.btn-arrow {
+    position: absolute;
+    right: 0;
+    z-index: 3;
+}
+
 /*--- MAIN END ---*/
